Update Hóa đơn